--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,184 @@
-body {
+/* importing google font - MontSerrat */
+@import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Collegiate+One:ital@0;1&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Playpen+Sans&family=Quicksand:wght@300;400;500;600;700&family=Roboto:wght@100;300;400;500;700;900&family=Tilt+Neon&display=swap');
+/* @import './Assets/clouds.png' */
+
+*{
+  font-family: "Montserrat", serif;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+body{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background: linear-gradient(#f5eeff,#dac3f8);
+}
+#root{
+  width: 100%;
+}
+.container{
+  max-width: 410px;
+  margin: 0 auto;
+  overflow: hidden;
+  z-index: 1;
+  border-radius: 10px;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+  background: linear-gradient(#312563,#33143c);
+}
+.container::after{
+  z-index: -1;
+  content:"";
+  position: absolute;
+  left: 0;
+  opacity: 0.7;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: url("./Assets/clouds.png");
+}
+.search-section{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 25px;
+}
+.search-section .search-form{
+  width: 100%;
+  height: 54px;
+  position: relative;
+}
+.search-section .search-form i{
+color: #fff;
+position: absolute;
+top: 50%;
+left: 16px;
+transform: translateY(-50%);
+}
+.search-section .search-input{
+width: 100%;
+height: 100%;
+outline: none;
+  padding: 0 20px 0 50px;
+  border-radius: 6px;
+  color: #fff;
+font-size:1rem;
+text-transform: uppercase;
+  background: rgba(255,255,255,0.05);
+  border: 1px solid rgba(255,255,255,0.05);
+  transition: 0.1s ease;
+}
+.search-section .search-input{
+  border-color: #a38cd9;
+}
+.search-section .search-input::placeholder{
+color: #ddd;
+text-transform: none;
+}
+.search-section .location-button{
+  height: 54px;
+  width: 56px;
+  border-radius: 6px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  color: #fff;
+  cursor: pointer;
+  transition: 0.2s ease;
+  background: rgba(255,255,255,0.1);
+  border: 1px solid rgba(255,255,255,0.05);
+}
+.search-section .location-button i{
+  font-size: 1.3rem;
+}
+.search-section .location-button:hover{
+  color: #b39fdf;
+  border-color: #a38cd9;
+}
+.weather-section :where(h2,p){
+  color: #fff;
+}
+.weather-section .current-weather{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 30px;
+}
+.current-weather .weather-icon{
+  width: 140px;
+  aspect-ratio: 1; 
+}
+.current-weather .temperature{
+  margin: 18px 0;
+  font-size: 3.38rem;
+  display: flex;
+
+}
+.current-weather .description {
+font-size: 1.25rem; 
+}
+.current-weather .temperature span{
+  font-size: 1.56rem;
+  font-weight: 400;
+  margin: 5px 0 0 2px;
+}
+.hourly-forecast {
+  padding: 16px 25px;
+  border-top: 1px solid rgba(255,255,255,0.25); 
+}
+.hourly-forecast .weather-list{
+  display: flex;
+  gap:32px;
+  list-style: none;
+  overflow-x: auto;
+  scrollbar-width: thin;
+  padding-bottom: 16px;
+  margin-bottom: -16px;
+  scrollbar-color: transparent transparent;
+}
+.hourly-forecast:hover .weather-list{
+  scrollbar-color: #c5bcdb transparent;
+}
+.hourly-forecast .weather-item{
+  display: flex;
+  gap: 7px;
+  flex-direction: column;
+  align-items: center;
+}
+.hourly-forecast .weather-item .weather-icon{
+width: 28px;
+aspect-ratio: 1;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* no result page design */
+.no-results{
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 460px;
+  padding: 60px 40px 40px;
+  text-align: center;
+}
+.no-results .title{
+  margin: 25px 0 15px;
+}
+
+/* Responsive media query code for small screen */
+@media(max-width:624px){
+  body,.search-section{
+    padding: 20px;
+  }
+  .hourly-forecast{
+    padding: 16px 20px;
+  }
+  .hourly-forecast  .weather-list{
+    gap: 24px;
+  }
+  .no-results{
+    padding: 30px;
+    min-height: 458px;
+  }
 }
